# Progressindicator-qml

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  main.cpp  progressindicator.cpp  progressindicator.h  qmlapplicationviewer.cpp  qmlapplicationviewer.h
src/qml/indicator/: ProgressIndicator.qml  indicator.qmlproject  main.qml
